--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="contact.html">Contact</a>
       <a href="feature.html">feature</a>
     </nav>
+      <img src="images/rights-banner.jpg" alt="Know Your Rights Banner" class="hero" />
   </header>
 
   <main>
