--- a/feature.html
+++ b/feature.html
@@ -14,4 +14,9 @@
       <p>Step-by-step assistance on how and where to file a complaint legally.</p>
     </div>
   </div>
+  <form method="GET" action="search.html">
+    <label for="search">Search More Rights:</label>
+    <input type="text" id="search" name="query" placeholder="e.g., equality" />
+    <button type="submit">Search</button>
+  </form>
 </section>
